--- a/core/templates/registration/password_reset_form.html
+++ b/core/templates/registration/password_reset_form.html
@@ -16,24 +16,25 @@
     {% include 'partials/header.html' %}
 
 {% load static %}
-<div class="container col-6">
-  <div class="card text-center W-75 mt-3">
+
+<div class="container col-12">
+  <div class="card text-center W-100 mt-3">
     <div class="card-header">
       <h1><b>Recuperación de contraseña</b></h1>
     </div>
-    <div class="card-body">
+    <div class="card-body ">
       <p class="login-box-msg">Por favor digite su correo electronico.</p>
-      <form  method="POST">
-        {% csrf_token %}
-        <i class="fa-sharp fa-solid fa-envelope-circle-check"></i>  
-        {{form.email}}
-        <div class="col text-center">
-          <input type="submit" class="btn btn-success btn-block mt-3 w-25" value="Enviar">
-          <p class="mt-3 mb-1"><a href="{% url 'inicio' %}">Volver a login</a></p>
-        </div>
-      </form>
+        <form  method="POST">
+          {% csrf_token %}
+            <i class="fa-sharp fa-solid fa-envelope-circle-check"></i>  
+          {{form.email}}
+          <div class=" text-center">
+            <input type="submit" class="btn btn-success btn-block mt-3 w-25" value="Enviar">
+              <p class="mt-3 mb-1"><a href="{% url 'inicio' %}">Volver a login</a></p>
+          </div>
+        </form>
+      </div>
     </div>
   </div>
-</div>
 
 {% include 'partials/footer.html' %}
