--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -2,8 +2,8 @@
 <h1>Bienvenido {{user.username}}</h1>
 {% block content %}
 
-<div class="container shadow w-50 h-80 text-center rounded mb-8 d-flex justify-content-center">
-    <div class="card mt-2" style="width: 50%;">
+<div class="container shadow w-100 h-80 text-center rounded mb-8 d-flex justify-content-center">
+    <div class="card mt-2" style="width: 70%;">
         <img src="/static/img/Profile.png" alt="Imagen Perfil" class="card-img-top mt-2">
             <div class="card-body ">
                 <h5 class="card-title"></h5>
@@ -13,7 +13,7 @@
                     <form action="">
                     
                         <label class="d-block mt-2" for="nombre" required>Nombre</label>
-                        <label class="d-block mt-2" for="tipo_documento" required>Tipo Documento</label>
+                        <label class="d-block mt-2" for="tipo_documentos" required>Tipo Documento</label>
                         <label class="d-block mt-2" for="numero_identidad">numero Identidad</label>
                         <label class="d-block mt-2" for="correo">Correo</label>
                         
