--- a/core/templates/modals/delete_modal.html
+++ b/core/templates/modals/delete_modal.html
@@ -1,10 +1,11 @@
 
 <!-- Modal -->
+<div class="container row">
 <div class="modal fade" id="modalEliminar{{usuario.id}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog">
-      <div class="modal-content">
+      <div class="modal-content ">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="staticBackdropLabel">Confirmar Eliminación de registro</h1>
+          <h1 class="modal-title  fs-5" id="staticBackdropLabel">Confirmar Eliminación de registro</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -23,5 +24,6 @@
         </div>
       </div>
     </div>
+  </div>
   </div>
   
