--- a/core/templates/partials/header.html
+++ b/core/templates/partials/header.html
@@ -21,11 +21,11 @@
     </style>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-6 bgcolor">
+            <div class="col-6 col-sm-6 bgcolor">
                 {% load static %}
                 <img src="{% static  'img/logo nuevo 2022.png' %}" alt="logo_contraloria">
             </div>
-            <div class="col-6 bgcolor text-end ">
+            <div class="col-6 col-sm-6 bgcolor text-end ">
                 <img src="{% static  'img/Escudo.png' %}" alt="escudo_colombia">
             </div>
         </div>
