--- a/core/templates/partials/js.html
+++ b/core/templates/partials/js.html
@@ -1,13 +1,19 @@
 <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-<script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.13.4/js/dataTables.bootstrap5.min.js"></script>
+<script src="https://cdn.datatables.net/responsive/2.4.1/js/responsive.bootstrap5.min.js"></script>
+<script type= "text/javascript" src="https://cdn.datatables.net/responsive/2.4.1/js/dataTables.responsive.min.js"></script>
+
+
     <script>
         $(document).ready(function() {
              $('#usuarios').DataTable( {
                 "language": {
                     "url": "https://cdn.datatables.net/plug-ins/1.12.1/i18n/es-MX.json"
-                        }
-                    } );
-                } );
+                        },
+                        responsive: true
+                    });
+                });
     </script>
 
 <script>
@@ -15,7 +21,9 @@
          $('#activos').DataTable( {
             "language": {
                 "url": "https://cdn.datatables.net/plug-ins/1.12.1/i18n/es-MX.json"
-                    }
-                } );
+                    },
+                    responsive : true
+                }
+                 );
             } );
 </script>
