--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -15,7 +15,8 @@
 <body>
     {% include 'partials/header.html' %}
     
-    <div class="container shadow w-25 text-center rounded-5 mt-5">
+<div class="row">
+    <div class="container shadow w-85 text-center rounded-5 mt-5 ">
         <div class="card text-center">
             <div class="card-header">
               <h1>Iniciar sesión</h1> 
@@ -49,6 +50,8 @@
             </div>
             </form>
     </div>
+</div>
+
 </body>
 <script src="https://kit.fontawesome.com/5ac4c3813c.js" crossorigin="anonymous"></script>
 {% include 'partials/footer.html' %}
