--- a/core/templates/registration/password_reset_done.html
+++ b/core/templates/registration/password_reset_done.html
@@ -16,18 +16,20 @@
 {% include 'partials/header.html' %}
 <body>
 <div class="login-box">
-  <div class="container w-50 mt-5">
-    <div class="card card-outline card-primary">
-      <div class="card-header text-center">
-        <h1"><b>CORREO ENVIADO</b></a>
-      </div>
-      <div class="card-body">
-        <p class="login-box-msg">Se ha enviado el correo para restaurar tu contraseña, si no lo encuentras en la bandeja principal, revisa el correo no deseado</p>
-        <p class="mt-3 mb-1">
-        <a href="{% url 'inicio' %}">Volver</a></p>
+  <div class="row col-md-12 col-sm-12" >
+    <div class="container w-80 mt-5">
+      <div class="card card-outline card-primary">
+        <div class="card-header text-center">
+          <h1"><b>CORREO ENVIADO</b></a>
+        </div>
+        <div class="card-body col-md-12 col-sm-12">
+          <p class="login-box-msg text-center">Se ha enviado el correo para restaurar tu contraseña, si no lo encuentras en la bandeja principal, revisa el correo no deseado</p>
+          <p class="mt-3 mb-1 text-center">
+          <a href="{% url 'inicio' %}" class="col-md-12">Volver</a></p>
       </div>
     </div>
   </div>
+</div>
 </div>
 </body>
 {% include 'partials/footer.html' %}
