--- a/core/templates/usuarios/usuarios.html
+++ b/core/templates/usuarios/usuarios.html
@@ -4,9 +4,12 @@
 {% block content %}
 
 
-<link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css">
+<link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.4.1/css/responsive.bootstrap5.min.css">
+<link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/dataTables.bootstrap5.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css">
 
-<table id="usuarios" class="display" style="width:100%">
+<div class="container">
+<table id="usuarios" class="display responsive justify-content" style="width:100%">
     <thead>
       <tr>
         <th scope=col>Nro</th>
@@ -15,16 +18,17 @@
         <th hscope="col">Correo </th>
         <th scope="col">Tipo de Documento</th>
         <th scope="col"># Documento</th>
-        <th scope="col">Teléfono</th>
         <th scope="col">Dirección</th>
         <th scope="col">Fecha de Nacimiento</th>
         <th scope="col">Rol</th>
         <th scope="col">Estado</th>
         <th scope="col">Acciones</th>
+        <th scope="col">Teléfono</th>
       </tr>
     </thead>
     <tbody>
   
+
       {% for usuario in usuarios %}
       <tr>
   
@@ -42,7 +46,7 @@
         <td>{{usuario.estado}}</td>
         
         
-      <td><a class="btn btn-primary" href="{% url 'usuarios_editar' usuario.id %}"><abbr title="editar">
+      <td><a class="btn btn-primary d-flex mt-2" href="{% url 'usuarios_editar' usuario.id %}"><abbr title="editar">
         <i class="fas fa-edit"></i></abbr></a>
         {% include 'modals/delete_modal.html' %}
         <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#modalEliminar{{usuario.id}}"><abbr title="eliminar">          
@@ -60,6 +64,7 @@
 
   </tbody>
 </table>
+</div>
 
 {% include 'partials/js.html' %}    
 {% endblock content %}
