--- a/core/templates/dashboard/panelAdministracion.html
+++ b/core/templates/dashboard/panelAdministracion.html
@@ -65,27 +65,27 @@
     </div>
   </nav>
   <!--Graficas ChartJS-->
-    <div class="card row flex-wrap">
+    <div class="row">
       <div class="card-header">
         <h2>Registros</h2>
       </div>
-      <div class="card-body">
+      <div class="card-body d-flex flex-wrap col-sm-6 col-md-5 col-lg-4">
         <h2 class="card-title text-center">Totales</h2>
           <canvas class="container" id="grafico-totales"></canvas>
       </div>
-      <div class="card-body">
+      <div class="card-body d-flex flex-wrap col-sm-6 col-md- col-lg-4">
         <h2 class="card-title text-center">Usuarios</h2>
             <canvas class="container" id="grafico-usuarios"></canvas>
       </div>
-      <div class="card-body">
+      <div class="card-body d-flex flex-wrap col-sm-6 col-md-4 col-lg-4">
       <h2 class="card-title text-center">Activos</h2>
         <canvas class="container" id="grafico-activos"></canvas>
       </div>
-      <div class="card-body">
+      <div class="card-body d-flex flex-wrap col-sm-6 col-md-4 col-lg-4">
         <h2 class="card-title text-center">Software</h2>
         <canvas class="container" id="grafico-software"></canvas>
       </div>
-      <div class="card-body">
+      <div class="card-body d-flex flex-wrap col-sm-6 col-md-4 col-lg-4">
       <h2 class="card-title text-center">Hardware</h2>
           <canvas class="container" id="grafico-hardware"></canvas>
       </div>
