--- a/static/css/graficoChart.css
+++ b/static/css/graficoChart.css
@@ -18,39 +18,15 @@ section, .card{
   display: flex;
 }
 
-.card {
-position: absolute;
-right: 60%;
-top: 10px;
-bottom: 0;
-width: 30%;
-height: auto;
-padding: 10px;
-flex-wrap: nowrap;
-justify-content: space-between;
-}
-.card-header{
-  height: 50px;
-}
-.card-body{
-margin-bottom: 5px;
-width: 100%;
-display: flex;
-flex-wrap: wrap;
-margin: 10px,20px,10px;
-
-}
-
 .card-title{
-font-size: 14px;
-align-items: flex-start;
-height: 100px;
+font-size: 20px;}
+
+.card-header{
+  border: 1px solid #e6ca77;
 }
 
-canvas{
-justify-content: center;
-width: 400px;
-height: auto;
+.card-body{
+  border: 1px solid #e6ca77;
 }
 
 
