creation of view for the html of registroActivos

--- a/core/templates/activos/registroActivos.html
+++ b/core/templates/activos/registroActivos.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<div class="col-md-8">
+<div class="col-md-12">
     <div class="card p-3">
         <div class="card-header">
             <h3 class="card-title">Activos</h3>
@@ -12,14 +12,14 @@
 
 <div class="card-body text-center" style="text-align: center; width: 100%;">
     <div class="col py-3 text-center">
-        <div class="col-md-8">
+        <div class="col-md-12">
             <div class="card p-3">
                 <div class="card-header">
                     <h3 class="card-title">Software</h3>
                 </div>
                 
 <div class="card-body text-center" style="text-align: center; width: 100%;">
-        <div class="col-sm-8">
+        <div class="col-sm-12">
             <div id="div_id_sistema_operativo" class="mb-3"></div>
             <div id="div_id_version_sistema_ope" class="mb-3">
                 <label for="id_version_sistema_op" class="form-label requiredField">
@@ -50,17 +50,17 @@
         </div>
     </div>
 </div>
-<div class="row ">
-<div class="col-md-8">
-    <div class="card p-3">
+<div class="row">
+<div class="col-md-12 col-sm-12 ">
+    <div class="card p-3 justify-content-center">
         <div class="card-header">
             <h3 class="card-title">Hardware</h3>
         </div>
                                     
         <div class="card-body">
-            <div class="col-sm-8 justify-content-center" style="text-align: center; width: 100%;">
+            <div class="col-sm-12" style="text-align: center; width: 100%;">
                 <div>
-                    <div class="col-sm-8">
+                    <div class="col-sm-12 col-md-12">
                         <div id="div_id_modelo" class="mb-3">
                             <label for="id_modelo" class="form-label requiredField">
                                 Modelo<span class="asteriskField">*</span> </label>
