--- a/core/templates/dashboard/panelAdministracion.html
+++ b/core/templates/dashboard/panelAdministracion.html
@@ -60,7 +60,10 @@
             </div>
             </div>
         </div>
-        
+        <div class="col py-3 text-center">
+          {% include 'toast.html' %}
+         
+        </div>
         </div>
     </div>
   </nav>
@@ -99,7 +102,7 @@
 
   const registroTotales = {
   
-  labels: ['China', 'EEUU', 'Rusia', 'Alemania', 'India', 'Brasil'],
+  labels: ['China', 'EEUU', 'Rusia', 'Alemania'],
   datasets: [{        
   data: [4100,1648 ,3500 ,2400 ,6500 ,1500 ],
   borderWidth: 1,
@@ -109,8 +112,6 @@
   "rgb(74, 136, 162)",
   "rgb(176, 211, 228)",
   "rgb(250, 172, 130)",
-  "rgb(187, 90, 44)",
-  "rgb(127, 90, 44)"
   ]
   
   }],
