--- a/core/templates/dashboard/registroPDF.html
+++ b/core/templates/dashboard/registroPDF.html
@@ -89,7 +89,7 @@
     <table id="registro" class="vh-50 display compact table-bordered border-secondary-subtled mx-auto mt-4"
         style="width:80%">
         <thead class="table_header">
-            <tr class="table_row" col->
+            <tr class="table_row" >
                 <th>Sistema Operativo</th>
                 <th>Version Sistema Operativo</th>
                 <th>Ofimatica</th>
